# Search-and-Destroy

./: MapReset.py  OriginalCamera.py  Readme.txt  TabletPather.py  Tablet_nav2  new_implemented_ros_state_machine.py  new_implemented_ros_state_machine_v2.py  run_cartographer.sh  tablet_nav2.py  total_readme.txt
3d_prints/: Camera Mount.stl  Lidar Mount-IMU Mount.stl  midsidefrontback.f3d.f3d
install/: local_setup.sh  setup.sh
install/ros2_mapping_support/lib/ros2_mapping_support/: bno055_imu_node  motor_driver_pca_reg_dual  nav_alignment_state_machine
install/ros2_mapping_support/share/ros2_mapping_support/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros2_mapping_support/share/ros2_mapping_support/config/: cartographer_2d_no_odom.lua  default.rviz  ekf_imu_only.yaml  my_map.pgm  my_map.yaml  nav2_params.yaml  nav2_params_cartographer_slam.yaml  nav2_slam_toolbox_params.yaml  simple_nav.xml  slam_params.yaml  slam_toolbox_online_async.yaml  slam_toolbox_params.yaml
install/ros2_mapping_support/share/ros2_mapping_support/launch/: cartographer_lidar_imu.launch.py  full_system_cartographer_nav2.launch.py  full_system_slamtoolbox_nav2.launch.py
log/: latest_build
src/ros2_mapping_support/: CMakeLists.txt  bno055_imu_node.py  package.xml  package.xml.save  setup.cfg  setup.py
src/ros2_mapping_support/config/: cartographer_2d_no_odom.lua  ekf_imu_only.yaml  my_map.pgm  my_map.yaml  nav2_params.yaml  nav2_params_cartographer_slam.yaml  nav2_params_cartographer_slam_resolved.yaml  simple_nav.xml
src/ros2_mapping_support/launch/: cartographer_lidar_imu.launch.py  fake_odom_from_tf.py  full_system_cartographer_nav2.launch.py
src/ros2_mapping_support/resource/: default.rviz
src/ros2_mapping_support/ros2_mapping_support/: bno055_imu_node.py  motor_driver_pca_reg_dual.py  nav_alignment_state_machine.py
src/ros2_mapping_support/scripts/: bno055_save_offsets.py
tools/: wasd_teleop_cartographer.py
