[develop]
script_dir=$base/lib/ros2_mapping_support
[install]
install_scripts=$base/lib/ros2_mapping_support

[metadata]
name = ros2_mapping_support
version = 0.0.0
author = Team4
author_email = team4@example.com
description = Support nodes and configs for Cartographer + BNO055 + RPLidar
license = BSD-3-Clause

[options]
packages = find:
package_dir =
    = .
install_requires =
    setuptools
zip_safe = true

[options.packages.find]
where = .

[options.data_files]
share/ament_index/resource_index/packages =
    ros2_mapping_support
share/ros2_mapping_support =
    package.xml
share/ros2_mapping_support/launch =
    launch/full_system_cartographer_nav2.launch.py
    launch/full_system_slamtoolbox_nav2.launch.py
share/ros2_mapping_support/config =
    config/nav2_params_cartographer.yaml
    config/nav2_params_slamtoolbox.yaml
    config/nav2_slam_toolbox_params.yaml
    config/slam_toolbox_params.yaml
    config/cartographer_2d_no_odom.lua
    config/simple_nav.xml
    config/nav2_params.yaml



[options.entry_points]
console_scripts =
    bno055_imu_node = ros2_mapping_support.bno055_imu_node:main
    fake_odom_from_tf = ros2_mapping_support.fake_odom_from_tf:main
